--- a/source/sass/blocks/form-content.scss
+++ b/source/sass/blocks/form-content.scss
@@ -1,4 +1,5 @@
 .form-content {
+  display: block;
   border-top: 1px solid $gray-border;
   padding-top: 15px;
 }
